# seddy

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  README.md  dev.requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-docker-image.yml  publish-python-package.yml  test-python-package.yml
docs/: Makefile  requirements.txt
docs/src/: cli.rst  conf.py  index.rst  io.rst  seddy.app.rst  seddy.decider.rst  seddy.decisions.rst  seddy.execute.rst  seddy.registration.rst  seddy.rst  specs.dag.rst  tutorial.rst  workflows.json  workflows.yml
examples/: dag.json
src/: seddy.py
src/seddy/: __init__.py  __main__.py  _util.py  app.py  decider.py  decisions.py  execute.py  registration.py
src/seddy/_specs/: __init__.py  _base.py  _dag.py  _io.py
src/seddy/decisions/: __init__.py  _base.py  _dag.py
tests/: requirements.txt  test_app.py  test_cli.py  test_decider.py  test_decisions.py  test_decisions_dag.py  test_execute.py  test_registration.py  test_specs_dag.py  test_util.py
tests/data/: dag.json
