[metadata]
name = seddy
version = file: VERSION
author = Laurie
author_email = laurie@sitesee.com.au
description = Multi-workflow SWF Decider Service
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sitesee, swf, decider
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    boto3
packages = find:
package_dir =
    =src
python_requires = ~=3.6

[options.entry_points]
console_scripts =
    seddy=seddy.__main__:main

[options.packages.find]
where = src
